--- a/www/css/estilos.css
+++ b/www/css/estilos.css
@@ -5,7 +5,7 @@
 
 body{
 	background: rgba(230,230,230,0.7);
-	font-family: 'Kavoon';
+	font-family: 'Kavoon' verdana;
 	font-size: 20px;
 }
 footer{
